# HackTest

./: .env.example  .gitignore  Makefile  docker-compose.yml
api/: Cargo.toml  Dockerfile
api/src/: main.rs
web/: .cta.json  README.md  package.json
web/src/components/: Header.tsx
web/src/routes/: index.tsx
web/src/routes/demo/: table.tsx
